added animations and social links

--- a/index.html
+++ b/index.html
@@ -191,6 +191,44 @@
             ways to make data analysis more fun and engaging. If you're looking
             for someone who can turn data into a work of art, look no further!
           </p>
+          <ul class="social-links links">
+            <li>
+              <a
+                class="social-link link"
+                href="https://github.com/Sajjad-Qureshi"
+                target="_blank"
+              >
+                <ion-icon name="logo-github"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social-link link"
+                href="https://www.linkedin.com/in/sajjad-qureshi/"
+                target="_blank"
+              >
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social-link link"
+                href="https://www.instagram.com/its_sam788/"
+                target="_blank"
+              >
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a
+                class="social-link link"
+                href="https://www.facebook.com/sajjad.qureshi.9469"
+                target="_blank"
+              >
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
