--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="index.js"></script>
     <title>Portfolio</title>
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
   </head>
   <body>
     <nav class="glassmorphism nav">
